# Way

./: README.md
ipa_coverage_planning/ipa_room_exploration/ros/src/: room_exploration_action_client.cpp  room_exploration_action_server.cpp
neuronbot2/neuronbot2_gazebo/worlds/: simple_house.world
neuronbot2/neuronbot2_nav/launch/: bringup.launch  localization.launch  navigation.launch
neuronbot2/neuronbot2_nav/maps/: simple_house.yaml
neuronbot2/neuronbot2_nav/rviz/: view_navigation.rviz
way_behavior_tree/: CMakeLists.txt  package.xml
way_behavior_tree/include/way_behavior_tree/: bt_action_node.h  bt_engine.h
way_behavior_tree/include/way_behavior_tree/plugins/action/: follow_path_action.h  full_coverage_path_planner.h  move_a2b_action.h  move_base_action.h  moving_a2b_action.h  moving_base_action.h  print_value_action.h
way_behavior_tree/include/way_behavior_tree/plugins/condition/: is_battery_low_condition.h  is_component_valid_condition.h  is_map_valid_condition.h
way_behavior_tree/launch/: simple_robot.launch
way_behavior_tree/plugins/action/: follow_path_action.cpp  full_coverage_path_planner.cpp  move_a2b_action.cpp  move_base_action.cpp  moving_a2b_action.cpp  moving_base_action.cpp  print_value_action.cpp
way_behavior_tree/plugins/condition/: is_battery_low_condition.cpp  is_component_valid_condition.cpp  is_map_valid_condition.cpp
way_behavior_tree/src/: bt_engine.cpp
way_behavior_tree/trees/: follow_path.xml  move_robot.xml  simple_mower_tree.xml
way_coverage_planning/: CMakeLists.txt  package.xml  simple_global_planner_plugin.xml
way_coverage_planning/include/way_coverage_planning/: simple_global_planner.h
way_coverage_planning/src/: simple_global_planner.cpp
way_mapping/: CMakeLists.txt  package.xml
way_mapping/map/: simple_path.csv
way_mapping/maps/: simple_house.pgm
way_mapping/src/: record_path.cpp
