<package>
  <name>way_behavior_tree</name>
  <version>0.0.1</version>
  <description>
  This package provides usefull utilities on top of BehaviorTree.CPP.
  </description>

  <maintainer email="salmos.hu@outlook.com">Salmos Hu</maintainer>

  <license>MIT</license>

  <author>Salmos Hu</author>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <!-- <build_depend>ipa_building_msgs</build_depend> -->
  <!-- <build_depend>ipa_room_exploration</build_depend> -->
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behaviortree_cpp_v3</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <!-- <run_depend>ipa_building_msgs</run_depend> -->
  <!-- <run_depend>ipa_room_exploration</run_depend> -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
